--- a/blue/index.html
+++ b/blue/index.html
@@ -4,6 +4,6 @@
 	<title>Capstone project</title>
 </head>
 <body style="background: blue;">
-	<p>Hello Planet, my name is Bala Nair</p>
+	<p>Hello World, my name is Moe Nabil</p>
 </body>
 </html>
